--- a/src/app/myeditor/myeditor.component.html
+++ b/src/app/myeditor/myeditor.component.html
@@ -1,9 +1,15 @@
 <input #txt type="text">
 <button (click)="addText(txt.value)">add</button>
-<div class="document-editor">
-    <div class="document-editor__toolbar"></div>
-    <div class="document-editor__editable-container">
-        <div class="document-editor__editable">
+&nbsp;
+<button (click)="getData()">get content</button>
+&nbsp;
+<p></p>
+<div *ngIf="!restricted">
+    <div class="document-editor">
+        <div class="document-editor__toolbar"></div>
+        <div class="document-editor__editable-container">
+            <div class="document-editor__editable">
+            </div>
         </div>
     </div>
 </div>
