--- a/src/app/myeditor/myeditor.component.html
+++ b/src/app/myeditor/myeditor.component.html
@@ -9,6 +9,7 @@
         <div class="document-editor__toolbar"></div>
         <div class="document-editor__editable-container">
             <div class="document-editor__editable">
+                sfgsfd
             </div>
         </div>
     </div>
