add link and text

--- a/src/app/myeditor/myeditor.component.html
+++ b/src/app/myeditor/myeditor.component.html
@@ -1,5 +1,8 @@
 <input #txt type="text">
+&nbsp;
 <button (click)="addText(txt.value)">add</button>
+&nbsp;
+<button (click)="addLink(txt.value)">Link</button>
 &nbsp;
 <button (click)="getData()">get content</button>
 &nbsp;
